# aic2sim

./: .gitignore  main.py  pyproject.toml
.zed/: debug.json
aic2sim/: __init__.py  act.py  dsl.py  gps.py  lxm.py  types.py
data/: bts.txt  intel.txt
nebellum/: __init__.py  act.py  app.py  dsl.py  gps.py  llm.py  lxm.py  types.py
