[project]
name = "aic2sim"
version = "0.0.32"
description = ""
authors = [{ name = "Noah Syrkis", email = "desk@syrkis.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "ipykernel>=6.29.5,<7",
    "einops>=0.8.0,<0.9",
    "tqdm>=4.66.5,<5",
    "parsimonious>=0.10.0,<0.11",
    "networkx>=3.4.2",
    "pydot<4",
    "opencv-python>=4.11.0.86",
    "fastapi[standard]>=0.115.12",
    "gemma @ git+https://github.com/google-deepmind/gemma.git",
    "kauldron @ git+https://github.com/google-research/kauldron.git",
    "jax>=0.6.2; sys_platform != 'linux'",
    "jax[cuda12]>=0.6.2; sys_platform == 'linux'",
    "chex>=0.1.88",
]


[tool.uv]

[dependency-groups]
dev = ["parabellum", "esch"]

[tool.uv.sources]
parabellum = { path = "../parabellum" }
esch = { path = "../esch" }

[tool.ruff]
line-length = 120
